--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our code, we will start by importing the neccessary modules for our task"
+    "Importing the required libraries "
    ]
   },
   {
@@ -29,7 +29,7 @@
     "from sklearn.linear_model import Lasso #Lasso algorithm\n",
     "from sklearn.metrics import r2_score, mean_absolute_error #Scoring systems\n",
     "\n",
-    "Next up, we will read our csv file and convert all the strings in the file to numbers for the Lasso algorithm to understand.\n",
+    "Reading csv file and converting every string value in the file to numbers so that Lasso algorithm understand it.\n",
     "\n",
     "df = pd.read_csv('LBNL_file.csv', low_memory=False) #Read the csv file\n",
     "\n",
@@ -71,7 +71,7 @@
     "\n",
     "df.shape\n",
     "\n",
-    "From here, we will get our X and y and split them into train(70% of data) and test(30% of data) chunks\n",
+    "X and y and split them into train(70% of data) and test(30% of data) \n",
     "\n",
     "#Our y will be the installed price, and our X will be everything but the price\n",
     "X = df.drop('total_installed_price', axis=1)\n",
@@ -89,7 +89,7 @@
     "print(mean_absolute_error(y_test, predictions)) #My mean absolute error: 26870.59197623797 \n",
     "print(r2_score(y_test, predictions)) #My r2_score: 0.21133233070095414\n",
     "\n",
-    "There is obviously room for improvement in the algorithm, which I will allow other people to do."
+    "There is a room for improvement in the algorithm,I will try to use others algorithms also soon."
    ]
   }
  ],
